# pyuic-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  pyuicprecommit.py
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci.yml
tests/: __init__.py  test_check_ui_files_hook.py  try_repo.py
tests/data/: ui_window.py
