[tool.poetry]
name = "pyuicprecommit"
version = "0.1.0"
description = "Pre-commit hook to validate Qt UI files have been generated using pyuic"
authors = ["hsaunders1904"]
readme = "README.md"

[tool.poetry.scripts]
pyuic-pre-commit = 'pyuicprecommit:main_with_exit'

[tool.poetry.dependencies]
python = "^3.9, <3.14"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.12"
mypy = "^1.16.0"

[tool.poetry.group.test.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"
gitpython = "^3.1.44"
pyside6 = "6.9.0"  # fix to match version used to generate reference test data

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "tests/data/*"

[tool.ruff]
exclude = ["tests/data/*"]
line-length = 89

[tool.ruff.lint]
select = [
    "C90", # mccabe
    "B", # flake8-bugbear
    "D", # pydocstyle
    "E", # pycodestyle-error
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "PTH", # flake8-use-pathlib
    "S", # flake8-bandit
    "UP", # pyupgrade
    "W", # pydocstyle-warning
]

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = [
    # Allow asserts in tests
    "S101",
    # Allow undocumented code in tests
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
